fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/Contract_Renewal__c.object-meta.xml
<CustomObject>
    <label>Contract Renewal</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Contract Renewal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Renewals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>