fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Account_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Count__c</fullName>
    <label>Account Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>