fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Approval_Flag_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Approval_Flag_Rollup__c</fullName>
    <label>Approval Flag Rollup</label>
    <summarizedField>Contract_Renewal_Item__c.Approval_Flag__c</summarizedField>
    <summaryForeignKey>Contract_Renewal_Item__c.Contract_Renewal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>