fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Condition_Rank__c.field-meta.xml
<CustomField>
    <fullName>Condition_Rank__c</fullName>
    <formula>if(Condition__c = &quot;XIND&quot;, 1, 
if(Condition__c = &quot;XPRI&quot;, 2, 
if(Condition__c = &quot;XSEC&quot;, 3, 
if(Condition__c = &quot;XNAF&quot;, 4, 
100 
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNU_Condition Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>