fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Contract_Customer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DNU_Contract Customer</label>
    <referenceTo>Contract_Customer__c</referenceTo>
    <relationshipLabel>Contract Renewals</relationshipLabel>
    <relationshipName>Contract_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>