fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Contract_Header__c.field-meta.xml
<CustomField>
    <fullName>Contract_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Header</label>
    <referenceTo>Contract_Header__c</referenceTo>
    <relationshipLabel>Contract Renewals</relationshipLabel>
    <relationshipName>Contract_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>