fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Contract_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Contract_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DNU_Contract Partnership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Renewals (Contract Partnership)</relationshipLabel>
    <relationshipName>Contract_Renewals1</relationshipName>
    <type>Lookup</type>
</CustomField>