fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Contracts_Rep__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracts Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Renewals2</relationshipName>
    <type>Lookup</type>
</CustomField>