fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Contracts_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Rep_Name__c</fullName>
    <formula>if(LEFT(Contracts_Rep__r.Id,3) = &quot;005&quot;, 
Contracts_Rep__r.FirstName &amp; &quot; &quot; &amp; Contracts_Rep__r.LastName,
Owner:Queue.QueueName  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracts Rep Name</label>
    <type>Text</type>
</CustomField>