fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/GPO_Contract_Ref__c.field-meta.xml
<CustomField>
    <fullName>GPO_Contract_Ref__c</fullName>
    <label>GPO Contract Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>