fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <length>2</length>
    <type>Text</type>
</CustomField>