fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <formula>CASE(Group__c,  
&quot;00&quot;,&quot;Urology&quot;,
&quot;01&quot;,&quot;Alt Site&quot;,
&quot;02&quot;,&quot;Anesthesia&quot;,
&quot;03&quot;,&quot;OEM&quot;,
&quot;04&quot;,&quot;Respiratory&quot;,
&quot;05&quot;,&quot;Surgical&quot;,
&quot;06&quot;,&quot;Critical Care&quot;,
&quot;07&quot;,&quot;GPO&quot;,
&quot;08&quot;,&quot;IDN&quot;,
&quot;09&quot;,&quot;Distribution&quot;,
&quot;10&quot;,&quot;Dialysis&quot;,
&quot;11&quot;,&quot;Specialty Markets&quot;,
&quot;12&quot;,&quot;Vascular Access&quot;,
&quot;13&quot;,&quot;Interventional&quot;,
&quot;14&quot;,&quot;Cardiac&quot;,
&quot;15&quot;,&quot;Cross Divisional&quot;,
&quot;Not Defined&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Name</label>
    <type>Text</type>
</CustomField>