fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/In_Approval__c.field-meta.xml
<CustomField>
    <fullName>In_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should only be checked when a Contract enters the Approval Process.  Uncheck only if rejected.</description>
    <label>In Approval</label>
    <type>Checkbox</type>
</CustomField>