fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <externalId>true</externalId>
    <label>DNU_Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>