fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Material_Count__c.field-meta.xml
<CustomField>
    <fullName>Material_Count__c</fullName>
    <label>Material Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>