fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/New_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Agreement_Number__c</fullName>
    <label>New Agreement Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>