fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <length>2</length>
    <type>Text</type>
</CustomField>