fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Objective_Name__c.field-meta.xml
<CustomField>
    <fullName>Objective_Name__c</fullName>
    <formula>if(Objective__c = &quot;01&quot;, &quot;Direct/Rebate (01)&quot;, 
if(Objective__c = &quot;02&quot;, &quot;Direct (02)&quot;, 
if(Objective__c = &quot;03&quot;, &quot;Distributor Netbill (03)&quot;, 
if(Objective__c = &quot;04&quot;, &quot;Specialty Market (04)&quot;, 
if(Objective__c = &quot;05&quot;, &quot;Strategic Accounts (05)&quot;, 
if(Objective__c = &quot;06&quot;, &quot;Rebate Only (06)&quot;, 
&quot;Not Defined&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objective Name</label>
    <type>Text</type>
</CustomField>