fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <length>25</length>
    <type>Text</type>
</CustomField>