fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <formula>TEXT(Owner:User.Approval_Role__c)</formula>
    <label>Owner Role</label>
    <type>Text</type>
</CustomField>