fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Rec_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Rec_Owner_Name__c</fullName>
    <formula>if(LEFT(OwnerId,3) = &quot;005&quot;,
Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName,
Owner:Queue.QueueName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>