fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Contract Renewals</relationshipLabel>
    <relationshipName>Contract_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>