fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <label>DNU_SAP Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>