fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Do Not Renew</fullName>
            </value>
            <value>
                <fullName>Contract Audit</fullName>
            </value>
            <value>
                <fullName>Sales Review</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Ready for Renew</fullName>
            </value>
            <value>
                <fullName>Renewal Complete</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Expired</fullName>
                <isActive>false</isActive>
                <label>Expired</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>