fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Sub_Group__c</fullName>
    <label>Sub-Group</label>
    <length>2</length>
    <type>Text</type>
</CustomField>