fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/fields/Sub_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Group_Name__c</fullName>
    <formula>CASE( Sub_Group__c,
&quot;1&quot;,&quot;GPO&quot;,
&quot;2&quot;,&quot;IDN&quot;,
&quot;3&quot;,&quot;Distribution&quot;,
&quot;4&quot;,&quot;Individual&quot;,
&quot;5&quot;,&quot;Government&quot;,
&quot;6&quot;,&quot;Courtesy&quot;,
&quot;7&quot;,&quot;International&quot;,
&quot;8&quot;,&quot;Other&quot;,
&quot;9&quot;,&quot;Custom&quot;,
&quot;10&quot;,&quot;VPS&quot;,
&quot;Not Defined&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Group Name</label>
    <type>Text</type>
</CustomField>