fullSandbox11072023/force-app/main/default/objects/Contract_Renewal__c/listViews/Contracts_Team_Contract_Renewal.listView-meta.xml
<ListView>
    <fullName>Contracts_Team_Contract_Renewal</fullName>
    <filterScope>Queue</filterScope>
    <label>Contracts Team</label>
    <queue>Contracts_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>